# seussical

./: .gitignore  README.md  concat  cues.ipynb  dca.ipynb  eos.ipynb  noise  pyproject.toml
mix/: seuss.tmix
scripts/: seussical.fountain
src/seussical/: __init__.py
